register page layout made

--- a/client/src/components/Register/register.module.css
+++ b/client/src/components/Register/register.module.css
@@ -41,7 +41,7 @@
 .field-label span:first-child {
     top: 17px;
     display: block!important;
-    position: absolute;
+    /* position: absolute; */ /* Event listener for focus and move span to the top */
     left: 16px;
     color: #999;
     background-color: #fff;
