fix topnav styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,7 +36,7 @@
 
 /*new topnv ends here: */
 .topnav {
-    background: rgba(28, 45, 58, .9);
+    /* background: rgba(28, 45, 58, .9); */
 }
 
 .topnav {
@@ -50,7 +50,7 @@
     box-sizing: border-box;
     display: block;
     left: 0;
-    background: #1c2d3a;
+    background: rgba(28, 45, 58, .9);
 }
 
 body {
