--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,7 @@
     /* background: rgba(28, 45, 58, .9); */
 }
 
-.topnav {
+/* .topnav {
     position: relative;
     z-index: 1;
     width: 100%;
@@ -370,7 +370,7 @@ a {
     letter-spacing: 0;
     line-height: 13px;
     font-weight: 500;
-}
+} */
 
 
 /* navigation bar css ends: */
