add footer.css file in components directory

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -762,7 +762,7 @@ a {
 
 /* Footer css starts: */
 
-#footer {
+/* #footer {
     background: url(./images/footer-img.jpg) no-repeat center top;
     left: 0;
     color: rgba(255, 255, 255, 0.6);
@@ -1060,7 +1060,7 @@ a {
     height: 84px;
     width: 84px;
     text-align: left;
-}
+} */
 
 
 /* Footer css ends: */
