clear some react warnings

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2048,12 +2048,7 @@ strong {
 
 /*Create page starts here */
 
-/* .creatediv {
-    max-width: 720px;
-    margin: 0 auto;
-    padding: 20px 0px 60px;
-}
-
+/*
 
 /* .creatediv .select{
     margin: 0;
@@ -2066,7 +2061,7 @@ strong {
     width: 100%;
 } */
 
-.creatediv .model,
+/* .creatediv .model,
 .creatediv .engine,
 .creatediv .color,
 .creatediv .brand,
@@ -2170,32 +2165,35 @@ strong {
     background: url(./images/upload.png);
     color: #fff;
 }
- */
+ */ */
 
 /*Create page ends here */
 
 
 /*products list in category css starts here */
 
-.content-products {
+/* .content-products {
     display: inline-block;
     vertical-align: top;
-    /* max-width: calc(100% - 300px); */
+     max-width: calc(100% - 300px);
     width: 100%;
     padding-left: 50px;
     padding-right: 50px;
     background: #f3f3f3;
 }
 
+
 .products-list {
     display: inline-block;
     vertical-align: top;
-    /* max-width: calc(100% - 300px); */
+    max-width: calc(100% - 300px);
     width: 100%;
     box-sizing: border-box;
     margin-top: 20px;
 }
 
+
+/*
 .products-list .product-item {
     max-width: calc(33.33% - 176px);
     margin-bottom: 40px;
@@ -2285,7 +2283,8 @@ strong {
     background: url(./images/not-found-icon.png) no-repeat center center;
     text-align: center;
     vertical-align: middle
-}
+} 
+*/
 
 
 /*products list in category ends here */
