--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2620,6 +2620,7 @@ strong {
     right: 0;
     text-align: center;
     margin: 1em;
+
 }
 
 .notification {
@@ -2627,6 +2628,10 @@ strong {
     color: #ffffff;
     display: none;
     text-align: right;
+    position: absolute;
+    z-index: 10;
+    margin-top: 25px;
+    margin-left: 8px;
 }
 
 .notification>span {
