--- a/client/src/components/Benefits/Benefits.css
+++ b/client/src/components/Benefits/Benefits.css
@@ -5,6 +5,10 @@
     padding: 40px 20px;
 }
 
+.benefits-wrapper {
+    border-top: 1px solid #e4e4e4;
+}
+
 .benefits ul li {
     display: inline-block;
     vertical-align: top;
