--- a/client/src/components/Cart/Cart.css
+++ b/client/src/components/Cart/Cart.css
@@ -5,7 +5,7 @@
 
 .container-cart {
     max-width: 1140px;
-    width: 100%;
+    width: initial;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
@@ -97,4 +97,17 @@
     background-color: #f8f9fa;
     padding: 0.75rem;
     text-align: inherit;
+}
+
+
+.shipping-wrapper {
+    margin-top: 30px;
+    background-color: white;
+
+    .total-price {
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        padding: 2rem;
+    }
 }
