--- a/client/src/components/Cart/Cart.css
+++ b/client/src/components/Cart/Cart.css
@@ -103,11 +103,110 @@
 .shipping-wrapper {
     margin-top: 30px;
     background-color: white;
+    position: relative;
 
     .total-price {
         display: flex;
         justify-content: end;
         align-items: center;
         padding: 2rem;
+        display: none;
+    }
+}
+
+.options {
+    display: flex;
+    flex-direction: column;
+    padding: 32px;
+    gap: 16px;
+
+    .deliveryOption {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        img {
+            height: 80px;
+            width: 80px;
+        }
+    }
+
+    input {
+        display: none;
+    }
+
+    label {
+        display: inline-block;
+        position: relative;
+        margin-right: 8px;
+        padding-left: 24px;
+        cursor: pointer;
+
+        &:before {
+            content: "";
+            display: block;
+            position: absolute;
+            width: 16px;
+            height: 16px;
+            left: 0;
+            top: 50%;
+            margin-top: -8px;
+            border: 1px solid black;
+            border-radius: 8px;
+        }
+
+        &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            width: 0;
+            height: 0;
+            top: 50%;
+            left: 8px;
+            margin-top: 0;
+            background: black;
+            border-radius: 4px;
+            transition: .2s ease-in-out;
+        }
+    }
+
+    :checked+label {
+        &:after {
+            height: 8px;
+            width: 8px;
+            margin-top: -4px;
+            left: 4px;
+        }
+    }
+}
+.spinner-container {
+    display: none;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    background-color: black;
+    opacity: 0.70;
+    z-index: 4;
+
+    .spinner {
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 56px;
+        height: 56px;
+        border-radius: 50%;
+        background: conic-gradient(#0000 10%, #000000);
+        -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 9px), #000 0);
+        animation: spinner-zp9dbg 1s infinite linear;
+        z-index: 5;
+        background-color: white;
+    }
+}
+
+@keyframes spinner-zp9dbg {
+    to {
+        transform: rotate(1turn);
     }
 }
