--- a/client/src/components/Cart/Cart.css
+++ b/client/src/components/Cart/Cart.css
@@ -105,11 +105,21 @@
     background-color: white;
     position: relative;
 
+    .shipping-price {
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        padding: 2rem;
+        padding-bottom: 0;
+        display: none;
+    }
+
     .total-price {
         display: flex;
         justify-content: end;
         align-items: center;
         padding: 2rem;
+        padding-top: 0;
         display: none;
     }
 }
